Ezkey-REST-Backend-main/api-gateway/gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  namespace: default
  labels:
    app: api-gateway
spec:
  type: LoadBalancer
  ports:
    - protocol: "TCP"
      port: 8080
      targetPort: 8080
  selector:
    app: api-gateway
